[package]
name = "diesel-geography"
version = "0.3.0"
authors = ["Boscop"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Boscop/diesel-geography"
documentation = "https://docs.rs/diesel-geography"
description = "Diesel support for PostGIS geography types and functions"
keywords = ["database", "sql", "orm"]
categories = ["database"]

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
postgis = { git = "https://github.com/jmpunkt/rust-postgis", branch = "optimize-dependencies"}
serde = { version = "1.0", features = ["derive"], optional = true }
